# scan2pddl-alfa

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: demo.md  limitations.md  paper_alignment.md  roadmap.md
examples/: alfa_motivating_overlay.json  alfa_motivating_problem.pddl  alfa_motivating_scan.xml
scripts/: generate_demo_media.py
src/scan2pddl_alfa/: __init__.py  cli.py
technical_note/: build_note.py  technical_note.md
tests/: test_cli.py
