[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scan2pddl-alfa"
version = "0.1.0"
description = "Convert network scan results into ALFA-Chains-style PDDL problem files."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Qiao Liang", email = "qiaosec@gmail.com" }
]
dependencies = []

[project.scripts]
scan2pddl-alfa = "scan2pddl_alfa.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".pytest_cache", "output", "tmp"]
